update image: title
Signed-off-by: hovahyii <hovahyii@gmail.com>

--- a/blog/achieve-linkedin-worthy-success-student-programs.mdx
+++ b/blog/achieve-linkedin-worthy-success-student-programs.mdx
@@ -2,7 +2,7 @@ export const metadata = {
   title: "Achieve LinkedIn-Worthy Success with These Student Programs",
   slug: "achieve-linkedin-worthy-success-student-programs",
   date: new Date('2024-05-26'),
-  image: "/blogs/linkedin-success.jpeg",
+  image: "/blogs/linkedin-success.jpg",
   author: "Cindy Pua",
   excerpt: "Feeling stunned by others' achievements on LinkedIn? Discover how you can make your resume stand out like top KOLs or student influencers by exploring various ambassador programs and internships. Connect with the industry through these opportunities."
 };
