--- a/blog/achieve-linkedin-worthy-success-student-programs.mdx
+++ b/blog/achieve-linkedin-worthy-success-student-programs.mdx
@@ -39,6 +39,8 @@ export const metadata = {
     <li>7. **Accenture Student Leadership Program**: Join by applying at <a href="https://www.accenture.com/us-en/careers/local/accenture-student-leadership-program" className="underline text-blue-500">Accenture Student Leadership Program</a>.</li>
     <li>8. **Teach for Malaysia Campus Leader**: Become a campus leader by applying at <a href="https://teachformalaysia.org/intern-campusleader/#campus-leader" className="underline text-blue-500">Teach for Malaysia</a>.</li>
     <li>9. **Google Developer Student Clubs Leads**: Apply at <a href="https://gdsc.advocu.com/" className="underline text-blue-500">Google Developer Student Clubs Leads</a>.</li>
+    <li>10. **L'Oréal Ambassador**: Explore opportunities at <a href="https://loa.avature.net/lyt2024" className="underline text-blue-500">L'Oréal Student Programs</a>.</li>
+    <li>11. **Hotlink Ambassador**: Apply at <a href="https://www.hotlink.com.my/en/terms-conditions/campaigns/hotlink-campus-ambassador/" className="underline text-blue-500">Maxis & Hotlink Ambassador Program</a>.</li>
 </ol>
 
 <br />
@@ -103,6 +105,16 @@ export const metadata = {
       <td className="border px-4 py-2">Hard</td>
       <td className="border px-4 py-2">Application, interview, and training</td>
     </tr>
+    <tr>
+      <td className="border px-4 py-2">L'Oréal Ambassador</td>
+      <td className="border px-4 py-2">Moderate</td>
+      <td className="border px-4 py-2">Online application and interview</td>
+    </tr>
+    <tr>
+      <td className="border px-4 py-2">Hotlink Ambassador</td>
+      <td className="border px-4 py-2">Moderate</td>
+      <td className="border px-4 py-2">Online application and interview</td>
+    </tr>
   </tbody>
 </table>
 
@@ -139,3 +151,5 @@ export const metadata = {
         </div>
     </div>
 </div>
+
+<br />
