--- a/blog/achieve-linkedin-worthy-success-student-programs.mdx
+++ b/blog/achieve-linkedin-worthy-success-student-programs.mdx
@@ -40,7 +40,7 @@ export const metadata = {
     <li>8. **Teach for Malaysia Campus Leader**: Become a campus leader by applying at <a href="https://teachformalaysia.org/intern-campusleader/#campus-leader" className="underline text-blue-500">Teach for Malaysia</a>.</li>
     <li>9. **Google Developer Student Clubs Leads**: Apply at <a href="https://gdsc.advocu.com/" className="underline text-blue-500">Google Developer Student Clubs Leads</a>.</li>
     <li>10. **L'Oréal Ambassador**: Explore opportunities at <a href="https://loa.avature.net/lyt2024" className="underline text-blue-500">L'Oréal Student Programs</a>.</li>
-    <li>11. **Hotlink Ambassador**: Apply at <a href="https://www.hotlink.com.my/en/terms-conditions/campaigns/hotlink-campus-ambassador/" className="underline text-blue-500">Maxis & Hotlink Ambassador Program</a>.</li>
+    <li>11. **Hotlink Ambassador**: Apply at <a href="https://www.hotlink.com.my/en/terms-conditions/campaigns/hotlink-campus-ambassador/" className="underline text-blue-500">Hotlink Ambassador Program</a>.</li>
 </ol>
 
 <br />
