--- a/blog/achieve-linkedin-worthy-success-student-programs.mdx
+++ b/blog/achieve-linkedin-worthy-success-student-programs.mdx
@@ -11,7 +11,7 @@ export const metadata = {
 
 <br />
 
-<div style={{ textAlign: 'center' }}>
+<div className="text-center">
   <img src="/blogs/linkedin-success.jpg" alt="LinkedIn Success" className="mx-auto block" />
 </div>
 
@@ -29,18 +29,18 @@ export const metadata = {
 
 <br />
 
-<ol className="text-lg">
-    <li>1. **Graduan Ambassador**: Apply at <a href="https://graduan.com/ambassador" className="underline text-blue-500">GRADUAN Ambassador Program</a>.</li> 
-    <li>2. **Maybank M-Ambassador**: Stay updated by following @myroaringcareers on Instagram and Facebook at Roaring Careers. They open ambassador slots every year.</li>
-    <li>3. **Huawei Seeds for the Future**: Learn more and apply at <a href="https://www.huawei.com/minisite/seeds-for-the-future/program.html" className="underline text-blue-500">Huawei Seeds for the Future</a>.</li>
-    <li>4. **GitHub Campus Expert**: Become a campus expert by applying at <a href="https://education.github.com/campus_experts" className="underline text-blue-500">GitHub Campus Experts</a>.</li>
-    <li>5. **Axiata Young Talent Programme (AYTP)**: Check out the details at <a href="https://axiatayoungtalentprogramme.com/" className="underline text-blue-500">Axiata Young Talent Programme</a>.</li>
-    <li>6. **Microsoft Learn Student Ambassadors**: Apply at <a href="https://mvp.microsoft.com/en-US/studentambassadors/apply" className="underline text-blue-500">Microsoft Learn Student Ambassadors</a>.</li>
-    <li>7. **Accenture Student Leadership Program**: Join by applying at <a href="https://www.accenture.com/us-en/careers/local/accenture-student-leadership-program" className="underline text-blue-500">Accenture Student Leadership Program</a>.</li>
-    <li>8. **Teach for Malaysia Campus Leader**: Become a campus leader by applying at <a href="https://teachformalaysia.org/intern-campusleader/#campus-leader" className="underline text-blue-500">Teach for Malaysia</a>.</li>
-    <li>9. **Google Developer Student Clubs Leads**: Apply at <a href="https://gdsc.advocu.com/" className="underline text-blue-500">Google Developer Student Clubs Leads</a>.</li>
-    <li>10. **L'Oréal Ambassador**: Explore opportunities at <a href="https://loa.avature.net/lyt2024" className="underline text-blue-500">L'Oréal Student Programs</a>.</li>
-    <li>11. **Hotlink Ambassador**: Apply at <a href="https://www.hotlink.com.my/en/terms-conditions/campaigns/hotlink-campus-ambassador/" className="underline text-blue-500">Hotlink Ambassador Program</a>.</li>
+<ol className="text-lg list-decimal list-inside">
+    <li><strong>Graduan Ambassador</strong>: Apply at <a href="https://graduan.com/ambassador" className="underline text-blue-500">GRADUAN Ambassador Program</a>.</li> 
+    <li><strong>Maybank M-Ambassador</strong>: Stay updated by following @myroaringcareers on Instagram and Facebook at Roaring Careers. They open ambassador slots every year.</li>
+    <li><strong>Huawei Seeds for the Future</strong>: Learn more and apply at <a href="https://www.huawei.com/minisite/seeds-for-the-future/program.html" className="underline text-blue-500">Huawei Seeds for the Future</a>.</li>
+    <li><strong>GitHub Campus Expert</strong>: Become a campus expert by applying at <a href="https://education.github.com/campus_experts" className="underline text-blue-500">GitHub Campus Experts</a>.</li>
+    <li><strong>Axiata Young Talent Programme (AYTP)</strong>: Check out the details at <a href="https://axiatayoungtalentprogramme.com/" className="underline text-blue-500">Axiata Young Talent Programme</a>.</li>
+    <li><strong>Microsoft Learn Student Ambassadors</strong>: Apply at <a href="https://mvp.microsoft.com/en-US/studentambassadors/apply" className="underline text-blue-500">Microsoft Learn Student Ambassadors</a>.</li>
+    <li><strong>Accenture Student Leadership Program</strong>: Join by applying at <a href="https://www.accenture.com/us-en/careers/local/accenture-student-leadership-program" className="underline text-blue-500">Accenture Student Leadership Program</a>.</li>
+    <li><strong>Teach for Malaysia Campus Leader</strong>: Become a campus leader by applying at <a href="https://teachformalaysia.org/intern-campusleader/#campus-leader" className="underline text-blue-500">Teach for Malaysia</a>.</li>
+    <li><strong>Google Developer Student Clubs Leads</strong>: Apply at <a href="https://gdsc.advocu.com/" className="underline text-blue-500">Google Developer Student Clubs Leads</a>.</li>
+    <li><strong>L'Oréal Ambassador</strong>: Explore opportunities at <a href="https://loa.avature.net/lyt2024" className="underline text-blue-500">L'Oréal Student Programs</a>.</li>
+    <li><strong>Hotlink Ambassador</strong>: Apply at <a href="https://www.hotlink.com.my/en/terms-conditions/campaigns/hotlink-campus-ambassador/" className="underline text-blue-500">Hotlink Ambassador Program</a>.</li>
 </ol>
 
 <br />
@@ -51,72 +51,74 @@ export const metadata = {
 
 <br />
 
-<table className="table-auto w-full text-lg">
-  <thead>
-    <tr>
-      <th className="px-4 py-2">Program</th>
-      <th className="px-4 py-2">Ease of Application</th>
-      <th className="px-4 py-2">Application Process</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td className="border px-4 py-2">Graduan Ambassador</td>
-      <td className="border px-4 py-2">Easy</td>
-      <td className="border px-4 py-2">Online application form</td>
-    </tr>
-    <tr>
-      <td className="border px-4 py-2">Maybank M-Ambassador</td>
-      <td className="border px-4 py-2">Moderate</td>
-      <td className="border px-4 py-2">Follow updates on social media</td>
-    </tr>
-    <tr>
-      <td className="border px-4 py-2">Huawei Seeds for the Future</td>
-      <td className="border px-4 py-2">Moderate</td>
-      <td className="border px-4 py-2">Online application and selection process</td>
-    </tr>
-    <tr>
-      <td className="border px-4 py-2">GitHub Campus Expert</td>
-      <td className="border px-4 py-2">Hard</td>
-      <td className="border px-4 py-2">Application, interview, and training</td>
-    </tr>
-    <tr>
-      <td className="border px-4 py-2">Axiata Young Talent Programme</td>
-      <td className="border px-4 py-2">Hard</td>
-      <td className="border px-4 py-2">Multiple rounds of selection</td>
-    </tr>
-    <tr>
-      <td className="border px-4 py-2">Microsoft Learn Student Ambassadors</td>
-      <td className="border px-4 py-2">Moderate</td>
-      <td className="border px-4 py-2">Online application and selection process</td>
-    </tr>
-    <tr>
-      <td className="border px-4 py-2">Accenture Student Leadership Program</td>
-      <td className="border px-4 py-2">Moderate</td>
-      <td className="border px-4 py-2">Online application and interview</td>
-    </tr>
-    <tr>
-      <td className="border px-4 py-2">Teach for Malaysia Campus Leader</td>
-      <td className="border px-4 py-2">Moderate</td>
-      <td className="border px-4 py-2">Online application and interview</td>
-    </tr>
-    <tr>
-      <td className="border px-4 py-2">Google Developer Student Clubs Leads</td>
-      <td className="border px-4 py-2">Hard</td>
-      <td className="border px-4 py-2">Application, interview, and training</td>
-    </tr>
-    <tr>
-      <td className="border px-4 py-2">L'Oréal Ambassador</td>
-      <td className="border px-4 py-2">Moderate</td>
-      <td className="border px-4 py-2">Online application and interview</td>
-    </tr>
-    <tr>
-      <td className="border px-4 py-2">Hotlink Ambassador</td>
-      <td className="border px-4 py-2">Moderate</td>
-      <td className="border px-4 py-2">Online application and interview</td>
-    </tr>
-  </tbody>
-</table>
+<div className="overflow-x-auto">
+  <table className="table-auto w-full text-lg">
+    <thead>
+      <tr>
+        <th className="px-4 py-2">Program</th>
+        <th className="px-4 py-2">Ease of Application</th>
+        <th className="px-4 py-2">Application Process</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td className="border px-4 py-2">Graduan Ambassador</td>
+        <td className="border px-4 py-2">Easy</td>
+        <td className="border px-4 py-2">Online application form</td>
+      </tr>
+      <tr>
+        <td className="border px-4 py-2">Maybank M-Ambassador</td>
+        <td className="border px-4 py-2">Moderate</td>
+        <td className="border px-4 py-2">Follow updates on social media</td>
+      </tr>
+      <tr>
+        <td className="border px-4 py-2">Huawei Seeds for the Future</td>
+        <td className="border px-4 py-2">Moderate</td>
+        <td className="border px-4 py-2">Online application and selection process</td>
+      </tr>
+      <tr>
+        <td className="border px-4 py-2">GitHub Campus Expert</td>
+        <td className="border px-4 py-2">Hard</td>
+        <td className="border px-4 py-2">Application, interview, and training</td>
+      </tr>
+      <tr>
+        <td className="border px-4 py-2">Axiata Young Talent Programme</td>
+        <td className="border px-4 py-2">Hard</td>
+        <td className="border px-4 py-2">Multiple rounds of selection</td>
+      </tr>
+      <tr>
+        <td className="border px-4 py-2">Microsoft Learn Student Ambassadors</td>
+        <td className="border px-4 py-2">Moderate</td>
+        <td className="border px-4 py-2">Online application and selection process</td>
+      </tr>
+      <tr>
+        <td className="border px-4 py-2">Accenture Student Leadership Program</td>
+        <td className="border px-4 py-2">Moderate</td>
+        <td className="border px-4 py-2">Online application and interview</td>
+      </tr>
+      <tr>
+        <td className="border px-4 py-2">Teach for Malaysia Campus Leader</td>
+        <td className="border px-4 py-2">Moderate</td>
+        <td className="border px-4 py-2">Online application and interview</td>
+      </tr>
+      <tr>
+        <td className="border px-4 py-2">Google Developer Student Clubs Leads</td>
+        <td className="border px-4 py-2">Hard</td>
+        <td className="border px-4 py-2">Application, interview, and training</td>
+      </tr>
+      <tr>
+        <td className="border px-4 py-2">L'Oréal Ambassador</td>
+        <td className="border px-4 py-2">Moderate</td>
+        <td className="border px-4 py-2">Online application and interview</td>
+      </tr>
+      <tr>
+        <td className="border px-4 py-2">Hotlink Ambassador</td>
+        <td className="border px-4 py-2">Moderate</td>
+        <td className="border px-4 py-2">Online application and interview</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
 <br />
 
@@ -151,5 +153,3 @@ export const metadata = {
         </div>
     </div>
 </div>
-
-<br />
